--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
-  "name": "static-site",
+  "name": "good-readme",
   "version": "1.0.0",
-  "description": "",
+  "description": "readme-generator",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Tung Tran",
   "license": "ISC",
   "dependencies": {
     "inquirer": "^6.3.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ttran1185/README_generator.git"
+  },
+  "keywords": [
+    "readme-generator"
+  ],
+  "bugs": {
+    "url": "https://github.com/ttran1185/README_generator/issues"
+  },
+  "homepage": "https://github.com/ttran1185/README_generator#readme"
 }
