--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "good-readme",
+  "name": "readme-generator",
   "version": "1.0.0",
-  "description": "readme-generator",
+  "description": "generator",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Tung Tran",
+  "author": "https://github.com/ttran1185",
   "license": "ISC",
   "dependencies": {
     "inquirer": "^6.3.1"
@@ -17,7 +17,7 @@
     "url": "git+https://github.com/ttran1185/README_generator.git"
   },
   "keywords": [
-    "readme-generator"
+    "readme"
   ],
   "bugs": {
     "url": "https://github.com/ttran1185/README_generator/issues"
