--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "https://github.com/ttran1185",
   "license": "ISC",
   "dependencies": {
+    "inquire": "^0.4.8",
     "inquirer": "^6.3.1"
   },
   "devDependencies": {},
